experience/experience.css
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

img {
  width: 100%;
  height: auto;
  display: block;
  object-fit: cover;
}

:root {
  --BG: #f3f3f1;
  --ALT-BG: #fff;
  --FOOTER-BG: #444444;
  --ALT-FOOTER-BG: #2a2a28;
  --TEXT-H: #2a2a28;
  --TEXT-P: #444444;
  --FF: "Manrope", sans-serif;
  --BORDER: 1px solid firebrick;
}

html {
  scroll-behavior: smooth;
}

body {
  background-color: var(--BG);
  display: flex;
  flex-direction: column;
  font-family: var(--FF);
  font-style: normal;
}


header {
  position: fixed;
  top: 0;
  left: 0;
  height: 90px;
  width: 100%;
  display: flex;
  align-items: center;
  padding-block: 30px;
  padding-inline: 50px;
  background-color: firebrick;
  border-bottom: 1px solid hsla(0, 0%, 80%, 0.5);
  transition: top 0.4s ease;
  z-index: 1000;
}
header.hidden{
  top: -90px;
}

.header-container {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.header-left {
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.header-left a {
  text-decoration: none;
  color: hsla(0, 0%, 0%, 0.6);
  font-size: 16px;
  font-weight: 400;
  line-height: 19px;
  letter-spacing: -0.2px;
}

.header-left a:hover {
  color: hsla(0, 0%, 0%, 0.8);
}

.header-right {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 25px;
}
.nav {
  text-decoration: none;
  color: hsla(0, 0%, 0%, 0.9);
  margin-left: 25px;
  font-size: 14px;
  font-weight: 400;
  line-height: 28px;
  letter-spacing: -0.1px;
}
.line {
  text-decoration: line-through;
}
.nav:hover, .line:hover {
  text-decoration: none;
  color: #828282;
}
.icon {
  border: 1px solid hsla(0, 0%, 80%, 0.8);
  border-radius: 8px;
  padding: 7px;
}

.theme-icon {
  width: 1.5rem;
  height: 1.5rem;
}
.icon:hover {
  cursor: pointer;
}

.intro{
  padding-top: 160px;
  display: flex;
  flex-direction: column;
  background-color: var(--ALT-BG);
  border-radius: 0 0 60px 60px;
  padding-inline: 7%;
  padding-bottom: 90px;
  margin-bottom: 100px;
}
.intro h1{
  font-size: 50px;
  font-weight: 400;
  line-height: 66px;
  letter-spacing: -0.5px;
  color: #201d15;
  margin-bottom: 25px;
}
.intro p{
  font-size: 18px;
  font-weight: 400;
  line-height: 29px;
  color: var(--TEXT-P);
}
.styled-text{
  font-weight: 700;
}

.experiences-container{
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  margin-inline: 7%;
  margin-bottom: 100px;
  gap: 20px;
}
.experience{
display: flex;
flex-direction: row;
gap: 24px;
border: 1px solid red;
}
.e-image{
  width: 100px;
  height: 100px;
  border: 1px solid hsla(0, 0%, 80%, 0.8);
  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.e-image img{
  width: 60px;
  height: 60px;
}


/* FOOTER STYLING */
.footer-top {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: var(--FOOTER-BG);
  padding-left: 100px;
  padding-block: 100px;
}
.footer-top h1 {
  font-size: 50px;
  font-weight: 500;
  line-height: 60px;
  letter-spacing: -1px;
  color: white;
  margin-bottom: 7px;
}
.footer-top p {
  font-size: 18px;
  font-weight: 400;
  line-height: 27px;
  color: #f3f3f2;
  margin-bottom: 25px;
}

.footer-btn a {
  text-decoration: none;
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  width: fit-content;
  border: none;
  padding-block: 10px;
  padding-inline: 50px;
  border-radius: 8px;
  background-color: var(--ALT-FOOTER-BG);
  font-size: 14px;
  font-weight: 500;
  line-height: 17px;
  transition: all 0.3s ease-in-out;
}
.footer-btn a:hover {
  background-color: white;
  color: black;
}

.footer-bottom {
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: var(--ALT-FOOTER-BG);
  padding-inline: 50px;
  padding-top: 55px;
  padding-bottom: 70px;
}

.fb-top {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding-bottom: 40px;
  border-bottom: 1px solid hsla(0, 0%, 80%, 0.2);
}
.fb-left {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 80px;
}
.fb-left-logo a {
  text-decoration: none;
  font-size: 16px;
  font-weight: 700;
  line-height: 19.2px;
  color: white;
}

.fb-left-logo a:hover {
  color: #ffffffd9;
}

.fb-left-links {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 30px;
}

.fb-left-links a {
  text-decoration: none;
  font-size: 14px;
  font-weight: 400;
  line-height: 28px;
  letter-spacing: -0.1px;
  color: #afafaf;
}

.fb-left-links a:hover {
  color: white;
}

.fb-right {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 30px;
}
.social-icons {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  border: 1px solid #cccccc33;
  padding: 12px;
  border-radius: 50%;
  transition: all 0.3s ease-in-out;
  color: white;
}
.social-icons:hover {
  cursor: pointer;
  background-color: white;
  color: black;
}
.fb-icon {
  width: 18px;
  height: 18px;
}
.fb-bottom {
  font-size: 14px;
  font-weight: 400;
  line-height: 16.8px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #afafaf;
  margin-top: 42px;
}

